<resources>
    <string name="app_name">108820027_HW6</string>
    <string name="orio_cookie_crumbles">Orio cookie crumbles</string>
    <string name="cherries">Cherries</string>
    <string name="crushed_nuts">Crushed nuts</string>
    <string name="sprinkles">Sprinkles</string>
    <string name="chocolate_syrup">Chocolate syrup</string>
    <string name="show_toast">Show Toast</string>
</resources>